# qtBall

./: .gitignore  CMakeLists.txt  README.md
include/: ball.h  ballwindow.h
source/: ball.cpp  ballwindow.cpp  main.cpp
src/: ball.cpp  ballwindow.cpp  main.cpp
